--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <title>trang test index</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   </head>
-  <body>
-    <p><span class="text-primary"><b>Địt con mẹ thằng Vũ Hưng rẻ rách</span>
-  </body>
+ <body style="text-align : center;">
+  <b class="text-primary">Địt con mẹ thằng Vũ Hưng rẻ rách.</b>
+ </body>
 </html>
